[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "putty-export"
version = "0.1.3"
description = "Export PuTTY session settings from Windows registry to OpenSSH config format"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Richard Dawson" }]
keywords = ["putty", "ssh", "config", "registry", "windows", "openssh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/radawson/putty-export"
Repository = "https://github.com/radawson/putty-export"
Documentation = "https://github.com/radawson/putty-export#readme"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
putty-export = "putty_export.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
